--- a/src/index.html
+++ b/src/index.html
@@ -5,42 +5,42 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Denis Zholob" />
-    <meta name="keywords" content="Denis, Zholob" />
-    <meta name="title" content="template_nx_project_name" />
-    <meta name="description" content="template_nx_project_description" />
+    <meta name="keywords" content="Denis, Zholob, Finance" />
+    <meta name="title" content="Expense Exchange" />
+    <meta name="description" content="Tool to keep track of expenses for multiple people" />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="template_nx_project_name" />
-    <meta itemprop="description" content="template_nx_project_description" />
+    <meta itemprop="name" content="Expense Exchange" />
+    <meta itemprop="description" content="Tool to keep track of expenses for multiple people" />
     <meta
       itemprop="image"
-      content="https://deniszholob.github.io/template-nx-project/assets/icons/splash.png"
+      content="https://deniszholob.github.io/expense-exchange/assets/icons/splash.png"
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://deniszholob.github.io/template-nx-project/" />
+    <meta property="og:url" content="https://deniszholob.github.io/expense-exchange/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="template_nx_project_name" />
-    <meta property="og:description" content="template_nx_project_description" />
+    <meta property="og:title" content="Expense Exchange" />
+    <meta property="og:description" content="Tool to keep track of expenses for multiple people" />
     <meta
       property="og:image"
-      content="https://deniszholob.github.io/template-nx-project/assets/icons/splash.png"
+      content="https://deniszholob.github.io/expense-exchange/assets/icons/splash.png"
     />
     <meta property="og:author" content="Denis Zholob" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="template_nx_project_name" />
-    <meta name="twitter:description" content="template_nx_project_description" />
+    <meta name="twitter:title" content="Expense Exchange" />
+    <meta name="twitter:description" content="Tool to keep track of expenses for multiple people" />
     <meta
       name="twitter:image"
-      content="https://deniszholob.github.io/template-nx-project/assets/icons/splash.png"
+      content="https://deniszholob.github.io/expense-exchange/assets/icons/splash.png"
     />
     <meta name="twitter:site" content="@deniszholob" />
     <meta name="twitter:creator" content="@deniszholob" />
 
     <!-- Title/Icon -->
-    <title>template_nx_project_name</title>
+    <title>Expense Exchange</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -102,7 +102,7 @@
           <br />
           Hit <strong>F12</strong> to bring up the Debug console, and
           <a
-            href="https://github.com/deniszholob/template-nx-project/issues"
+            href="https://github.com/deniszholob/expense-exchange/issues"
             target="_blank"
             rel="noopener"
           >
